
JasperReports Change Log
===================================

JasperReports 1.3.5 (2007-0x-xx)
-----------------------------------

- style templates;

- faster XML data source using Jaxen;

- current bean mapping (_THIS) in bean data sources

- Mondrian 2.3.2 upgrade

- minor bug fixes and improvements;





JasperReports 1.3.4 (2007-06-11)
-----------------------------------

- new "runDirection" attribute available for crosstabs to enable right-to-left rendering policy;

- support for large documents in the ODT exporter;

- security checks enabled for custom code execution during report generation;

- minor bug fixes and improvements;





JasperReports 1.3.3 (2007-04-30)
-----------------------------------

- support for inner classes and arrays in report template types (parameters, fields, variables)
and custom classes associated with the report template (scriptletClass, formatFactoryClass, etc);

- minor bug fixes and improvements;





JasperReports 1.3.2 (2007-03-30)
-----------------------------------

- new Open Document Format exporter added (beta version);

- enhanced RTF exporter;

- improved error handling during report compilation to help detecting 
the source of the problem;

- support for custom name/value pair properties for report fields 
and report parameters;

- new $X{} syntax available and recursive expansion of $P!{} parameter 
references in the <queryString> tag to help building dynamic queries;

- minor bug fixes and improvements;





JasperReports 1.3.1 (2007-02-21)
-----------------------------------

- stacked area chart support added;

- style properties inheritance for charts;

- XMLA query executer mapped by default to the "mdx" and "MDX" query languages,
just like the MDX query executer; the latter takes precedence;

- minor bug fixes and improvements;





JasperReports 1.3.0 (2006-12-22)
-----------------------------------

- new XMLA data source implementation added to support reporting using OLAP engine