@@ -13,6 +13,8 @@ JasperReports 1.3.5 (2007-0x-xx)
 
 - Mondrian 2.3.2 upgrade
 
+- customized color palette for JExcel exporter
+
 - minor bug fixes and improvements;
 
 
